--- a/index.html
+++ b/index.html
@@ -38,168 +38,168 @@
   const works = [
     {
       image: "thumb19.jpg",
-      title: "作品タイトル19",
-      caption: "自然なズレによって構造が現れます。"
+      title: "sunlight",
+      caption: "2023　silkscreen print on paper"
     },
     {
       image: "thumb20.jpg",
-      title: "作品タイトル20",
-      caption: "自然なズレによって構造が現れます。"
+      title: "sunlight",
+      caption: "2023　silkscreen print on paper"
     },
     {
       image: "thumb21.jpg",
-      title: "作品タイトル21",
-      caption: "自然なズレによって構造が現れます。"
+      title: "sunlight",
+      caption: "2023　silkscreen print on paper"
     },
     {
       image: "thumb22.jpg",
-      title: "作品タイトル22",
-      caption: "自然なズレによって構造が現れます。"
+      title: "sunlight",
+      caption: "2023　silkscreen print on paper"
     },
     {
       image: "thumb23.jpg",
-      title: "作品タイトル23",
-      caption: "自然なズレによって構造が現れます。"
+      title: "sunlight",
+      caption: "2023　silkscreen print on paper"
     },
     {
       image: "thumb24.jpg",
-      title: "作品タイトル24",
-      caption: "自然なズレによって構造が現れます。"
+      title: "sunlight",
+      caption: "2023　silkscreen print on paper"
     },
     {
       image: "thumb25.jpg",
-      title: "作品タイトル25",
-      caption: "自然なズレによって構造が現れます。"
+      title: "sunlight",
+      caption: "2023　silkscreen print on paper"
     },
     {
       image: "thumb26.jpg",
-      title: "作品タイトル26",
-      caption: "自然なズレによって構造が現れます。"
+      title: "sunlight",
+      caption: "2023　silkscreen print on paper"
     },
     {
       image: "thumb27.jpg",
-      title: "作品タイトル27",
-      caption: "自然なズレによって構造が現れます。"
+      title: "sunlight",
+      caption: "2023　silkscreen print on paper"
     },
     {
       image: "thumb28.jpg",
-      title: "作品タイトル28",
-      caption: "自然なズレによって構造が現れます。"
+      title: "sunlight",
+      caption: "2023　silkscreen print on paper"
     },
     {
       image: "thumb29.jpg",
-      title: "作品タイトル29",
-      caption: "自然なズレによって構造が現れます。"
+      title: "sunlight",
+      caption: "2023　silkscreen print on paper"
     },
     {
       image: "thumb30.jpg",
-      title: "作品タイトル30",
-      caption: "自然なズレによって構造が現れます。"
+      title: "sunlight",
+      caption: "2023　silkscreen print on paper"
     },
     {
       image: "thumb12.jpg",
-      title: "作品タイトル12",
-      caption: "自然なズレによって構造が現れます。"
+      title: "spray",
+      caption: "2022　spray paint on wood panel"
     },
     {
       image: "thumb13.jpg",
-      title: "作品タイトル13",
-      caption: "自然なズレによって構造が現れます。"
+      title: "spray",
+      caption: "2022　spray paint on wood panel"
     },
     {
       image: "thumb14.jpg",
-      title: "作品タイトル14",
-      caption: "自然なズレによって構造が現れます。"
+      title: "spray",
+      caption: "2022　spray paint on wood panel"
     },
     {
       image: "thumb16.jpg",
-      title: "作品タイトル16",
-      caption: "自然なズレによって構造が現れます。"
+      title: "spray",
+      caption: "2022　spray paint on wood panel"
     },
     {
       image: "thumb17.jpg",
-      title: "作品タイトル17",
-      caption: "自然なズレによって構造が現れます。"
+      title: "spray",
+      caption: "2022　spray paint on wood panel"
     },
     {
       image: "thumb18.jpg",
-      title: "作品タイトル18",
-      caption: "自然なズレによって構造が現れます。"
+      title: "spray",
+      caption: "2022　spray paint on wood panel"
     },
     {
       image: "thumb2.jpg",
-      title: "作品タイトル2",
-      caption: "これは現象Bに着目したインスタレーションです。"
+      title: "trophy for NANAIRO Sports Festa",
+      caption: "2019　acrylic board,aluminum block"
     },
     {
       image: "thumb3.jpg",
-      title: "作品タイトル3",
-      caption: "△△の構造を活かして制作しました。"
+      title: "poly bag fauna",
+      caption: "2021　plaster"
     },
     {
       image: "thumb4.jpg",
-      title: "作品タイトル4",
-      caption: "△△の構造を活かして制作しました。"
+      title: "poly bag fauna",
+      caption: "2021　plaster"
     },
     {
       image: "thumb5.jpg",
-      title: "作品タイトル5",
-      caption: "現象Cの変化を観察しています。"
+      title: "poly bag fauna",
+      caption: "2021　plaster"
     },
     {
       image: "thumb6.jpg",
-      title: "作品タイトル6",
-      caption: "自然なズレによって構造が現れます。"
+      title: "poly bag fauna",
+      caption: "2021　plaster"
     },
     {
       image: "thumb7.jpg",
-      title: "作品タイトル7",
-      caption: "自然なズレによって構造が現れます。"
+      title: "poly bag fauna",
+      caption: "2021　plaster"
     },
     {
       image: "thumb8.jpg",
-      title: "作品タイトル8",
-      caption: "自然なズレによって構造が現れます。"
+      title: "squares",
+      caption: "2021　acrylic paint on camvus"
     },
     {
       image: "thumb9.jpg",
-      title: "作品タイトル9",
-      caption: "自然なズレによって構造が現れます。"
+      title: "squares",
+      caption: "2021　acrylic paint on camvus"
     },
     {
       image: "thumb10.jpg",
-      title: "作品タイトル10",
-      caption: "自然なズレによって構造が現れます。"
+      title: "squares",
+      caption: "2021　acrylic paint on camvus"
     },
     {
       image: "thumb10-2.jpg",
-      title: "作品タイトル10-2",
-      caption: "自然なズレによって構造が現れます。"
+      title: "squares",
+      caption: "2021　acrylic paint on camvus"
     },
     {
       image: "thumb11.jpg",
-      title: "作品タイトル11",
+      title: "squares（制作風景）",
       caption: "自然なズレによって構造が現れます。"
     },
     {
       image: "thumb1.jpg",
-      title: "作品タイトル1",
-      caption: "この作品は素材Aを使い、○○を表現しています。"
+      title: "plastic dan-pole",
+      caption: "2019　corrugated plastic,turntable"
     },
     {
       image: "thumb1-3.jpg",
-      title: "作品タイトル1-3",
-      caption: "自然なズレによって構造が現れます。"
+      title: "plastic dan-pole",
+      caption: "2019　corrugated plastic,turntable"
     }, 
     {
       image: "thumb1-4.jpg",
-      title: "作品タイトル1-4",
-      caption: "自然なズレによって構造が現れます。"
+      title: "plastic dan-pole",
+      caption: "2019　corrugated plastic,turntable"
     },
     {
       image: "thumb1-2.jpg",
-      title: "作品タイトル1-2",
-      caption: "自然なズレによって構造が現れます。"
+      title: "plastic dan-pole",
+      caption: "2019　corrugated plastic,turntable"
     }
   ];
 
