--- a/index.html
+++ b/index.html
@@ -159,27 +159,27 @@
     {
       image: "thumb8.jpg",
       title: "squares",
-      caption: "2021　acrylic paint on camvus"
+      caption: "2021　acrylic paint on canvas"
     },
     {
       image: "thumb9.jpg",
       title: "squares",
-      caption: "2021　acrylic paint on camvus"
+      caption: "2021　acrylic paint on canvas"
     },
     {
       image: "thumb10.jpg",
       title: "squares",
-      caption: "2021　acrylic paint on camvus"
+      caption: "2021　acrylic paint on canvas"
     },
     {
       image: "thumb10-2.jpg",
       title: "squares",
-      caption: "2021　acrylic paint on camvus"
+      caption: "2021　acrylic paint on canvas"
     },
     {
       image: "thumb11.jpg",
       title: "squares（制作風景）",
-      caption: "自然なズレによって構造が現れます。"
+      caption: " "
     },
     {
       image: "thumb1.jpg",
