--- a/index.html
+++ b/index.html
@@ -199,9 +199,7 @@
     {
       image: "thumb1-2.jpg",
       title: "plastic dan-pole",
-      caption: "<p>2019　180×180×1000mm（10点組）</p>
-        <p>corrugated plastic,turntable</p>
-        <p>円形に切ったプラダンを積層。規則正しく並んだ孔を通して帯状に透けて見える部分が現れ、上下に移動する。</p>"
+      caption: "2019　180×180×1000mm（10点組）corrugated plastic,turntable円形に切ったプラダンを積層。規則正しく並んだ孔を通して帯状に透けて見える部分が現れ、上下に移動する"
     }
   ];
 
