--- a/index.html
+++ b/index.html
@@ -199,11 +199,7 @@
     {
       image: "thumb1-2.jpg",
       title: "plastic dan-pole",
-      caption: "
-      2019　180×180×1000mm（10点組）<br>
-      corrugated plastic,turntable<br>
-      円形に切ったプラダンを積層。規則正しく並んだ孔を通して帯状に透けて見える部分が現れ、上下に移動する
-      "
+      caption: "2019　180×180×1000mm（10点組）corrugated plastic,turntable　円形に切ったプラダンを積層。規則正しく並んだ孔を通して帯状に透けて見える部分が現れ、上下に移動する"
     }
   ];
 
