--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   const work = works[currentIndex];
  　 document.getElementById("modal-image").src = work.image;
  　 document.getElementById("modal-title").textContent = work.title;
-　  document.getElementById("modal-text").innerHTML = work.caption;  // ← 修正
+　  document.getElementById("modal-text").innerHTML = work.caption;
 　}
 
 
