--- a/index.html
+++ b/index.html
@@ -134,72 +134,72 @@
     {
       image: "thumb3.jpg",
       title: "poly bag fauna",
-      caption: "2021　plaster"
+      caption: "2021　plaster<br>プラスチックバッグの片隅に石膏を流し入れそのまま硬化させ形を取り出す。<br>シワの表情を写し取り、わずかに異なる形が大量に生まれる。"
     },
     {
       image: "thumb4.jpg",
       title: "poly bag fauna",
-      caption: "2021　plaster"
+      caption: "2021　plaster<br>プラスチックバッグの片隅に石膏を流し入れそのまま硬化させ形を取り出す。<br>シワの表情を写し取り、わずかに異なる形が大量に生まれる。"
     },
     {
       image: "thumb5.jpg",
       title: "poly bag fauna",
-      caption: "2021　plaster"
+      caption: "2021　plaster<br>プラスチックバッグの片隅に石膏を流し入れそのまま硬化させ形を取り出す。<br>シワの表情を写し取り、わずかに異なる形が大量に生まれる。"
     },
     {
       image: "thumb6.jpg",
       title: "poly bag fauna",
-      caption: "2021　plaster"
+      caption: "2021　plaster<br>プラスチックバッグの片隅に石膏を流し入れそのまま硬化させ形を取り出す。<br>シワの表情を写し取り、わずかに異なる形が大量に生まれる。"
     },
     {
       image: "thumb7.jpg",
       title: "poly bag fauna",
-      caption: "2021　plaster"
+      caption: "2021　plaster<br>プラスチックバッグの片隅に石膏を流し入れそのまま硬化させ形を取り出す。<br>シワの表情を写し取り、わずかに異なる形が大量に生まれる。"
     },
     {
       image: "thumb8.jpg",
       title: "squares",
-      caption: "2021　acrylic paint on canvas"
+      caption: "2021　180×180mm（100組）acrylic paint on canvas<br>口頭での指示を頼りに、目隠しをした状態で正方形のガイドラインをなぞる。<br>誘導役を100人に依頼。100個の歪んだ形が生まれた。"
     },
     {
       image: "thumb9.jpg",
       title: "squares",
-      caption: "2021　acrylic paint on canvas"
+      caption: "2021　180×180mm（100組）acrylic paint on canvas<br>口頭での指示を頼りに、目隠しをした状態で正方形のガイドラインをなぞる。<br>誘導役を100人に依頼。100個の歪んだ形が生まれた。"
     },
     {
       image: "thumb10.jpg",
       title: "squares",
-      caption: "2021　acrylic paint on canvas"
+      caption: "2021　180×180mm（100組）acrylic paint on canvas<br>口頭での指示を頼りに、目隠しをした状態で正方形のガイドラインをなぞる。<br>誘導役を100人に依頼。100個の歪んだ形が生まれた。"
     },
     {
       image: "thumb10-2.jpg",
       title: "squares",
-      caption: "2021　acrylic paint on canvas"
+      caption: "2021　180×180mm（100組）acrylic paint on canvas<br>口頭での指示を頼りに、目隠しをした状態で正方形のガイドラインをなぞる。<br>誘導役を100人に依頼。100個の歪んだ形が生まれた。"
     },
     {
       image: "thumb11.jpg",
-      title: "squares（制作風景）",
-      caption: " "
+      title: "squares（process）",
+      caption: "2021　制作風景<br>口頭での指示を頼りに、目隠しをした状態で正方形のガイドラインをなぞる。 "
     },
     {
       image: "thumb1.jpg",
       title: "plastic dan-pole",
-      caption: "2019　corrugated plastic,turntable"
+      caption: "2019　180×180×1000mm（10点組）corrugated plastic,turntable<br>円形に切ったプラダンを積層。<br>規則正しく並んだ孔を通して帯状に透けて見える部分が現れ、上下に移動する。"
     },
     {
       image: "thumb1-3.jpg",
       title: "plastic dan-pole",
-      caption: "2019　corrugated plastic,turntable"
+      caption: "2019　180×180×1000mm（10点組）corrugated plastic,turntable<br>円形に切ったプラダンを積層。<br>規則正しく並んだ孔を通して帯状に透けて見える部分が現れ、上下に移動する。"
     }, 
     {
       image: "thumb1-4.jpg",
       title: "plastic dan-pole",
-      caption: "2019　corrugated plastic,turntable"
+      caption: "2019　180×180×1000mm（10点組）corrugated plastic,turntable<br>円形に切ったプラダンを積層。<br>規則正しく並んだ孔を通して帯状に透けて見える部分が現れ、上下に移動する。"
     },
     {
       image: "thumb1-2.jpg",
       title: "plastic dan-pole",
-      caption: "2019　180×180×1000mm（10点組）corrugated plastic,turntable<br>円形に切ったプラダンを積層。<br>規則正しく並んだ孔を通して帯状に透けて見える部分が現れ、上下に移動する"
+      caption: "2019　180×180×1000mm（10点組）corrugated plastic,turntable<br>円形に切ったプラダンを積層。<br>規則正しく並んだ孔を通して帯状に透けて見える部分が現れ、上下に移動する。"
     }
   ];
 
