--- a/index.html
+++ b/index.html
@@ -39,97 +39,97 @@
     {
       image: "thumb19.jpg",
       title: "sunlight",
-      caption: "2023　silkscreen print on paper"
+      caption: "2023　silkscreen print on paper<br>シルクスクリーンプリントによるシリーズ。<br>植物の影を使って製版を行った。"
     },
     {
       image: "thumb20.jpg",
       title: "sunlight",
-      caption: "2023　silkscreen print on paper"
+      caption: "2023　silkscreen print on paper<br>シルクスクリーンプリントによるシリーズ。<br>植物の影を使って製版を行った。"
     },
     {
       image: "thumb21.jpg",
       title: "sunlight",
-      caption: "2023　silkscreen print on paper"
+      caption: "2023　silkscreen print on paper<br>シルクスクリーンプリントによるシリーズ。<br>植物の影を使って製版を行った。"
     },
     {
       image: "thumb22.jpg",
       title: "sunlight",
-      caption: "2023　silkscreen print on paper"
+      caption: "2023　silkscreen print on paper<br>シルクスクリーンプリントによるシリーズ。<br>植物の影を使って製版を行った。"
     },
     {
       image: "thumb23.jpg",
       title: "sunlight",
-      caption: "2023　silkscreen print on paper"
+      caption: "2023　silkscreen print on paper<br>シルクスクリーンプリントによるシリーズ。<br>植物の影を使って製版を行った。"
     },
     {
       image: "thumb24.jpg",
       title: "sunlight",
-      caption: "2023　silkscreen print on paper"
+      caption: "2023　silkscreen print on paper<br>シルクスクリーンプリントによるシリーズ。<br>植物の影を使って製版を行った。"
     },
     {
       image: "thumb25.jpg",
       title: "sunlight",
-      caption: "2023　silkscreen print on paper"
+      caption: "2023　silkscreen print on paper<br>シルクスクリーンプリントによるシリーズ。<br>植物の影を使って製版を行った。"
     },
     {
       image: "thumb26.jpg",
       title: "sunlight",
-      caption: "2023　silkscreen print on paper"
+      caption: "2023　silkscreen print on paper<br>シルクスクリーンプリントによるシリーズ。<br>植物の影を使って製版を行った。"
     },
     {
       image: "thumb27.jpg",
       title: "sunlight",
-      caption: "2023　silkscreen print on paper"
+      caption: "2023　silkscreen print on paper<br>シルクスクリーンプリントによるシリーズ。<br>植物の影を使って製版を行った。"
     },
     {
       image: "thumb28.jpg",
       title: "sunlight",
-      caption: "2023　silkscreen print on paper"
+      caption: "2023　silkscreen print on paper<br>シルクスクリーンプリントによるシリーズ。<br>植物の影を使って製版を行った。"
     },
     {
       image: "thumb29.jpg",
       title: "sunlight",
-      caption: "2023　silkscreen print on paper"
+      caption: "2023　silkscreen print on paper<br>シルクスクリーンプリントによるシリーズ。<br>植物の影を使って製版を行った。"
     },
     {
       image: "thumb30.jpg",
       title: "sunlight",
-      caption: "2023　silkscreen print on paper"
+      caption: "2023　silkscreen print on paper<br>シルクスクリーンプリントによるシリーズ。<br>植物の影を使って製版を行った。"
     },
     {
       image: "thumb12.jpg",
       title: "spray",
-      caption: "2022　spray paint on wood panel"
+      caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。<br>わずかな高低差を拾って輪郭がぼやけ、立体感のある像になる。"
     },
     {
       image: "thumb13.jpg",
       title: "spray",
-      caption: "2022　spray paint on wood panel"
+      caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。<br>わずかな高低差を拾って輪郭がぼやけ、立体感のある像になる。"
     },
     {
       image: "thumb14.jpg",
       title: "spray",
-      caption: "2022　spray paint on wood panel"
+      caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。<br>わずかな高低差を拾って輪郭がぼやけ、立体感のある像になる。"
     },
     {
       image: "thumb16.jpg",
       title: "spray",
-      caption: "2022　spray paint on wood panel"
+      caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。<br>わずかな高低差を拾って輪郭がぼやけ、立体感のある像になる。"
     },
     {
       image: "thumb17.jpg",
       title: "spray",
-      caption: "2022　spray paint on wood panel"
+      caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。<br>わずかな高低差を拾って輪郭がぼやけ、立体感のある像になる。"
     },
     {
       image: "thumb18.jpg",
       title: "spray",
-      caption: "2022　spray paint on wood panel"
+      caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。<br>わずかな高低差を拾って輪郭がぼやけ、立体感のある像になる。"
     },
     {
       image: "thumb2.jpg",
       title: "trophy for NANAIRO Sports Festa",
-      caption: "2019　acrylic board,aluminum block"
+      caption: "2019　100×100×200mm,acrylic board,aluminum block<br>つくば市洞峰公園で開催された「なないろスポーツフェスタ2019」駅伝部門の優勝トロフィーとして制作。<br>透明感のあるガラス色のアクリル板の内側に白のアクリル板をはめ込んである。"
     },
     {
       image: "thumb3.jpg",
