--- a/exhibition.html
+++ b/exhibition.html
@@ -67,6 +67,42 @@
         <p>2022.5.01 - 2022.8.15</p>
         <p>アートルーム企画室（広尾/東京）</p>
       </div>
+
+    <div style="margin-top:100px;">
+    <div>
+      <img src="exhibition6.jpg" alt="exhibition 6"style="width:50%; vertical-align: top;">
+      <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
+        <p>KUMA EXHIBITION 2022</p>
+        <p>2022.3.01 - 2022.8.15</p>
+        <p>ANB Tokyo（六本木/東京）</p>
+      </div>
+
+    <div style="margin-top:100px;">
+    <div>
+      <img src="exhibition5.jpg" alt="exhibition 2"style="width:50%; vertical-align: top;">
+      <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
+        <p>vary</p>
+        <p>2021.10.01 - 2021.8.15</p>
+        <p>千年一日珈琲焙煎所café（つくば市/茨城県）</p>
+      </div>
+
+    <div style="margin-top:100px;">
+    <div>
+      <img src="exhibition5.jpg" alt="exhibition 2"style="width:50%; vertical-align: top;">
+      <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
+        <p>SICF21 Winners Exhibition</p>
+        <p>2021.5.01 - 2021.8.15</p>
+        <p>Spiral（表参道/東京）</p>
+      </div>
+
+    <div style="margin-top:100px;">
+    <div>
+      <img src="exhibition5.jpg" alt="exhibition 2"style="width:50%; vertical-align: top;">
+      <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
+        <p>SPOT-視点、回転、発展</p>
+        <p>2021.5.01 - 2021.8.15</p>
+        <p>Spiral（表参道/東京）</p>
+      </div>
     </div>
   </main>
  
