--- a/exhibition.html
+++ b/exhibition.html
@@ -102,6 +102,8 @@
         <p>SPOT-視点、回転、発展</p>
         <p>2021.5.01 - 2021.8.15</p>
         <p>Spiral（表参道/東京）</p>
+        <p>Photo:TADA(YUKAI)</p>
+        <p>Courtesy of SPIRAL/Wacoal Art Center</p>
       </div>
     </div>
   </main>
