--- a/exhibition.html
+++ b/exhibition.html
@@ -61,7 +61,7 @@
 
     <div style="margin-top:100px;">
     <div>
-      <img src="exhibition5.jpg" alt="exhibition 5"style="width:50%; vertical-align: top;">
+      <img src="exhibition5.JPG" alt="exhibition 5"style="width:50%; vertical-align: top;">
       <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
         <p>image</p>
         <p>2022.5.01 - 2022.8.15</p>
@@ -70,7 +70,7 @@
 
     <div style="margin-top:100px;">
     <div>
-      <img src="exhibition6.jpg" alt="exhibition 6"style="width:50%; vertical-align: top;">
+      <img src="exhibition6.JPG" alt="exhibition 6"style="width:50%; vertical-align: top;">
       <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
         <p>KUMA EXHIBITION 2022</p>
         <p>2022.3.01 - 2022.8.15</p>
@@ -79,7 +79,7 @@
 
     <div style="margin-top:100px;">
     <div>
-      <img src="exhibition7.jpg" alt="exhibition 7"style="width:50%; vertical-align: top;">
+      <img src="exhibition7.JPG" alt="exhibition 7"style="width:50%; vertical-align: top;">
       <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
         <p>vary</p>
         <p>2021.10.01 - 2021.8.15</p>
@@ -88,7 +88,7 @@
 
     <div style="margin-top:100px;">
     <div>
-      <img src="exhibition8.jpg" alt="exhibition 8"style="width:50%; vertical-align: top;">
+      <img src="exhibition8.JPG" alt="exhibition 8"style="width:50%; vertical-align: top;">
       <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
         <p>SICF21 Winners Exhibition</p>
         <p>2021.5.01 - 2021.8.15</p>
