--- a/exhibition.html
+++ b/exhibition.html
@@ -19,10 +19,9 @@
   </header>
 
   <main>
-    <div style="padding: 50px;">
-    <div>
-      <img src="exhibition1.jpg" alt="exhibition1"style="width:50%; vertical-align: bottom; font-size: 0.8rem;">
-      <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px ;">
+    <div style="display:flex; align-items: flex-end; margin-top:100px;">
+      <img src="exhibition1.jpg" alt="exhibition 1" style="width:50%;">
+      <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>武蔵野美術大学 助教・助手展 2024</p>
         <p>2024.12.01 - 2024.12.15</p>
         <p>武蔵野美術大学美術館（小平市/東京）</p>
