--- a/exhibition.html
+++ b/exhibition.html
@@ -28,76 +28,68 @@
       </div>
     </div>
 
-    <div style="margin-top:100px;">
-    <div>
-      <img src="exhibition2.jpg" alt="exhibition 2"style="width:50%; vertical-align: top;">
-      <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
+    <div style="display:flex; align-items: flex-end; margin-top:100px;">
+      <img src="exhibition2.jpg" alt="exhibition 2" style="width:50%;">
+      <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>武蔵野美術大学 助教・助手展 2023</p>
         <p>2023.12.01 - 2024.12.15</p>
         <p>武蔵野美術大学美術館（小平市/東京）</p>
       </div>
     </div>
     
-    <div style="margin-top:100px;">  
-    <div>
-      <img src="exhibition3.jpg" alt="exhibition 3"style="width:50%; vertical-align: top;">
-      <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
+    <div style="display:flex; align-items: flex-end; margin-top:100px;">
+      <img src="exhibition3.jpg" alt="exhibition 3" style="width:50%;">
+      <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>光のりんかく</p>
         <p>2024.8.01 - 2024.8.15</p>
         <p>Marco Gallery（心斎橋/大阪）</p>
       </div>
     </div>
 
-    <div style="margin-top:100px;">
-    <div>
-      <img src="exhibition4.jpg" alt="exhibition 2"style="width:50%; vertical-align: top;">
-      <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
+    <div style="display:flex; align-items: flex-end; margin-top:100px;">
+      <img src="exhibition4.jpg" alt="exhibition 4" style="width:50%;">
+      <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>SCENERY</p>
         <p>2024.2.01 - 2024.2.15</p>
         <p>Marco Gallery（心斎橋/大阪）</p>
       </div>
     </div>
 
-    <div style="margin-top:100px;">
-    <div>
-      <img src="exhibition5.JPG" alt="exhibition 5"style="width:50%; vertical-align: top;">
-      <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
+    <div style="display:flex; align-items: flex-end; margin-top:100px;">
+      <img src="exhibition5.jpg" alt="exhibition 5" style="width:50%;">
+      <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>image</p>
         <p>2022.5.01 - 2022.8.15</p>
         <p>アートルーム企画室（広尾/東京）</p>
       </div>
 
-    <div style="margin-top:100px;">
-    <div>
-      <img src="exhibition6.JPG" alt="exhibition 6"style="width:50%; vertical-align: top;">
-      <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
+    <div style="display:flex; align-items: flex-end; margin-top:100px;">
+      <img src="exhibition6.jpg" alt="exhibition 6" style="width:50%;">
+      <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>KUMA EXHIBITION 2022</p>
         <p>2022.3.01 - 2022.8.15</p>
         <p>ANB Tokyo（六本木/東京）</p>
       </div>
 
-    <div style="margin-top:100px;">
-    <div>
-      <img src="exhibition7.JPG" alt="exhibition 7"style="width:50%; vertical-align: top;">
-      <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
+    <div style="display:flex; align-items: flex-end; margin-top:100px;">
+      <img src="exhibition7.jpg" alt="exhibition 7" style="width:50%;">
+      <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>vary</p>
         <p>2021.10.01 - 2021.8.15</p>
         <p>千年一日珈琲焙煎所café（つくば市/茨城県）</p>
       </div>
 
-    <div style="margin-top:100px;">
-    <div>
-      <img src="exhibition8.JPG" alt="exhibition 8"style="width:50%; vertical-align: top;">
-      <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
+    <div style="display:flex; align-items: flex-end; margin-top:100px;">
+      <img src="exhibition8.jpg" alt="exhibition 8" style="width:50%;">
+      <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>SICF21 Winners Exhibition</p>
         <p>2021.5.01 - 2021.8.15</p>
         <p>Spiral（表参道/東京）</p>
       </div>
 
-    <div style="margin-top:100px;">
-    <div>
-      <img src="exhibition9.jpg" alt="exhibition 9"style="width:50%; vertical-align: top;">
-      <div style="display: inline-block; width:45%; vertical-align: top; padding-left: 50px;">
+    <div style="display:flex; align-items: flex-end; margin-top:100px;">
+      <img src="exhibition9.jpg" alt="exhibition 9" style="width:50%;">
+      <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>SPOT-視点、回転、発展</p>
         <p>2021.5.01 - 2021.8.15</p>
         <p>Spiral（表参道/東京）</p>
