--- a/exhibition.html
+++ b/exhibition.html
@@ -62,6 +62,7 @@
         <p>2022.5.01 - 2022.8.15</p>
         <p>アートルーム企画室（広尾/東京）</p>
       </div>
+    </div>
 
     <div style="display:flex; align-items: flex-end; margin-top:100px;">
       <img src="exhibition6.jpg" alt="exhibition 6" style="width:50%;">
@@ -70,6 +71,7 @@
         <p>2022.3.01 - 2022.8.15</p>
         <p>ANB Tokyo（六本木/東京）</p>
       </div>
+    </div>
 
     <div style="display:flex; align-items: flex-end; margin-top:100px;">
       <img src="exhibition7.jpg" alt="exhibition 7" style="width:50%;">
@@ -78,6 +80,7 @@
         <p>2021.10.01 - 2021.8.15</p>
         <p>千年一日珈琲焙煎所café（つくば市/茨城県）</p>
       </div>
+    </div>
 
     <div style="display:flex; align-items: flex-end; margin-top:100px;">
       <img src="exhibition8.jpg" alt="exhibition 8" style="width:50%;">
@@ -86,6 +89,7 @@
         <p>2021.5.01 - 2021.8.15</p>
         <p>Spiral（表参道/東京）</p>
       </div>
+    </div>
 
     <div style="display:flex; align-items: flex-end; margin-top:100px;">
       <img src="exhibition9.jpg" alt="exhibition 9" style="width:50%;">
