--- a/exhibition.html
+++ b/exhibition.html
@@ -56,7 +56,7 @@
     </div>
 
     <div style="display:flex; align-items: flex-end; margin-top:100px;">
-      <img src="exhibition5.jpg" alt="exhibition 5" style="width:50%;">
+      <img src="exhibition5.JPG" alt="exhibition 5" style="width:50%;">
       <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>image</p>
         <p>2022.5.01 - 2022.8.15</p>
@@ -65,7 +65,7 @@
     </div>
 
     <div style="display:flex; align-items: flex-end; margin-top:100px;">
-      <img src="exhibition6.jpg" alt="exhibition 6" style="width:50%;">
+      <img src="exhibition6.JPG" alt="exhibition 6" style="width:50%;">
       <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>KUMA EXHIBITION 2022</p>
         <p>2022.3.01 - 2022.8.15</p>
@@ -74,7 +74,7 @@
     </div>
 
     <div style="display:flex; align-items: flex-end; margin-top:100px;">
-      <img src="exhibition7.jpg" alt="exhibition 7" style="width:50%;">
+      <img src="exhibition7.JPG" alt="exhibition 7" style="width:50%;">
       <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>vary</p>
         <p>2021.10.01 - 2021.8.15</p>
@@ -83,7 +83,7 @@
     </div>
 
     <div style="display:flex; align-items: flex-end; margin-top:100px;">
-      <img src="exhibition8.jpg" alt="exhibition 8" style="width:50%;">
+      <img src="exhibition8.JPG" alt="exhibition 8" style="width:50%;">
       <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>SICF21 Winners Exhibition</p>
         <p>2021.5.01 - 2021.8.15</p>
