--- a/exhibition.html
+++ b/exhibition.html
@@ -28,7 +28,7 @@
       </div>
     </div>
 
-    <div style="display:flex; align-items: flex-end; margin-top:100px;">
+    <div style="display:flex; align-items: flex-end; margin-top:100px; margin-left:50px;">
       <img src="exhibition2.jpg" alt="exhibition 2" style="width:50%;">
       <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>武蔵野美術大学 助教・助手展 2023</p>
@@ -37,7 +37,7 @@
       </div>
     </div>
     
-    <div style="display:flex; align-items: flex-end; margin-top:100px;">
+    <div style="display:flex; align-items: flex-end; margin-top:100px; margin-left:50px;">
       <img src="exhibition3.jpg" alt="exhibition 3" style="width:50%;">
       <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>光のりんかく</p>
@@ -46,7 +46,7 @@
       </div>
     </div>
 
-    <div style="display:flex; align-items: flex-end; margin-top:100px;">
+    <div style="display:flex; align-items: flex-end; margin-top:100px; margin-left:50px;">
       <img src="exhibition4.jpg" alt="exhibition 4" style="width:50%;">
       <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>SCENERY</p>
@@ -55,7 +55,7 @@
       </div>
     </div>
 
-    <div style="display:flex; align-items: flex-end; margin-top:100px;">
+    <div style="display:flex; align-items: flex-end; margin-top:100px; margin-left:50px;">
       <img src="exhibition5.JPG" alt="exhibition 5" style="width:50%;">
       <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>image</p>
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-    <div style="display:flex; align-items: flex-end; margin-top:100px;">
+    <div style="display:flex; align-items: flex-end; margin-top:100px; margin-left:50px;">
       <img src="exhibition6.JPG" alt="exhibition 6" style="width:50%;">
       <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>KUMA EXHIBITION 2022</p>
@@ -73,7 +73,7 @@
       </div>
     </div>
 
-    <div style="display:flex; align-items: flex-end; margin-top:100px;">
+    <div style="display:flex; align-items: flex-end; margin-top:100px; margin-left:50px;">
       <img src="exhibition7.JPG" alt="exhibition 7" style="width:50%;">
       <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>vary</p>
@@ -82,7 +82,7 @@
       </div>
     </div>
 
-    <div style="display:flex; align-items: flex-end; margin-top:100px;">
+    <div style="display:flex; align-items: flex-end; margin-top:100px; margin-left:50px;">
       <img src="exhibition8.JPG" alt="exhibition 8" style="width:50%;">
       <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>SICF21 Winners Exhibition</p>
@@ -91,7 +91,7 @@
       </div>
     </div>
 
-    <div style="display:flex; align-items: flex-end; margin-top:100px;">
+    <div style="display:flex; align-items: flex-end; margin-top:100px; margin-left:50px;">
       <img src="exhibition9.jpg" alt="exhibition 9" style="width:50%;">
       <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>SPOT-視点、回転、発展</p>
