--- a/exhibition.html
+++ b/exhibition.html
@@ -19,8 +19,8 @@
   </header>
 
   <main>
-    <div style="display:flex; align-items: flex-end; margin-top:100px;">
-      <img src="exhibition1.jpg" alt="exhibition 1" style="width:50%;　margin-left:50px;">
+    <div style="display:flex; align-items: flex-end; margin-top:100px; margin-left:50px;">
+      <img src="exhibition2.jpg" alt="exhibition 2" style="width:50%;">
       <div style="width:45%; padding-left: 50px; font-size: 0.8rem;">
         <p>武蔵野美術大学 助教・助手展 2024</p>
         <p>2024.12.01 - 2024.12.15</p>
