--- a/index.html
+++ b/index.html
@@ -37,6 +37,76 @@
  <script>
   const works = [
     {
+      image: "thumb31.jpg",
+      title: " ",
+      caption: " "
+    },
+    {
+      image: "thumb32.jpg",
+      title: " ",
+      caption: " "
+    },
+    {
+      image: "thumb33.jpg",
+      title: " ",
+      caption: " "
+    },
+    {
+      image: "thumb34.jpg",
+      title: " ",
+      caption: " "
+    },
+    {
+      image: "thumb35.jpg",
+      title: " ",
+      caption: " "
+    },
+    {
+      image: "thumb36.jpg",
+      title: " ",
+      caption: " "
+    },
+    {
+      image: "thumb36.jpg",
+      title: " ",
+      caption: " "
+    },
+    {
+      image: "thumb37.jpg",
+      title: " ",
+      caption: " "
+    },
+    {
+      image: "thumb38.jpg",
+      title: " ",
+      caption: " "
+    },
+    {
+      image: "thumb39.jpg",
+      title: " ",
+      caption: " "
+    },
+    {
+      image: "thumb40.jpg",
+      title: " ",
+      caption: " "
+    },
+    {
+      image: "thumb41.jpg",
+      title: " ",
+      caption: " "
+    },
+    {
+      image: "thumb42.jpg",
+      title: " ",
+      caption: " "
+    },
+    {
+      image: "thumb43.jpg",
+      title: " ",
+      caption: " "
+    },
+    {
       image: "thumb19.jpg",
       title: "sunlight",
       caption: "2023　silkscreen print on paper<br>シルクスクリーンプリントによるシリーズ。<br>植物の影を使って製版を行った。"
