--- a/index.html
+++ b/index.html
@@ -37,47 +37,47 @@
  <script>
   const works = [
     {
-      image: "thumb31.JPG",
+      image: "thumb31.jpg",
       title: " ",
       caption: " "
     },
     {
-      image: "thumb32.JPG",
+      image: "thumb32.jpg",
       title: " ",
       caption: " "
     },
     {
-      image: "thumb33.JPG",
+      image: "thumb33.jpg",
       title: " ",
       caption: " "
     },
     {
-      image: "thumb34.JPG",
+      image: "thumb34.jpg",
       title: " ",
       caption: " "
     },
     {
-      image: "thumb35.JPG",
+      image: "thumb35.jpg",
       title: " ",
       caption: " "
     },
     {
-      image: "thumb36.JPG",
+      image: "thumb36.jpg",
       title: " ",
       caption: " "
     },
     {
-      image: "thumb36.JPG",
+      image: "thumb36.jpg",
       title: " ",
       caption: " "
     },
     {
-      image: "thumb37.JPG",
+      image: "thumb37.jpg",
       title: " ",
       caption: " "
     },
     {
-      image: "thumb38.JPG",
+      image: "thumb38.jpg",
       title: " ",
       caption: " "
     },
@@ -87,22 +87,22 @@
       caption: " "
     },
     {
-      image: "thumb40.JPG",
+      image: "thumb40.jpg",
       title: " ",
       caption: " "
     },
     {
-      image: "thumb41.JPG",
+      image: "thumb41.jpg",
       title: " ",
       caption: " "
     },
     {
-      image: "thumb42.JPG",
+      image: "thumb42.jpg",
       title: " ",
       caption: " "
     },
     {
-      image: "thumb43.JPG",
+      image: "thumb43.jpg",
       title: " ",
       caption: " "
     },
