--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="NAKAYAMA Kahoko - Portfolio site. Exploring forms emerging from materials and structures.">
+  <meta name="keywords" content="art, portfolio, contemporary art, material, structure">　
   <title>works</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="favicon.png" type="image/png">
