--- a/index.html
+++ b/index.html
@@ -195,9 +195,19 @@
       caption: "2022　spray paint on wood panel<br>木製パネルの上に日用品を置き、真上からスプレー塗料を吹き付けた。<br>わずかな高低差を拾って輪郭がぼやけ、立体感のある像になる。"
     },
     {
-      image: "thumb2.jpg",
-      title: "trophy for NANAIRO Sports Festa",
-      caption: "2019　100×100×200mm,acrylic board,aluminum block<br>つくば市洞峰公園で開催された「なないろスポーツフェスタ2019」駅伝部門の優勝トロフィーとして制作。<br>透明感のあるガラス色のアクリル板の内側に白のアクリル板をはめ込んである。"
+      image: "thumb44.jpg",
+      title: "toothpicks",
+      caption: "2021"
+    },
+    {
+      image: "thumb45.jpg",
+      title: "toothpicks",
+      caption: "2021"
+    },
+    {
+      image: "thumb46.jpg",
+      title: "toothpicks",
+      caption: "2021"
     },
     {
       image: "thumb3.jpg",
@@ -248,6 +258,31 @@
       image: "thumb11.jpg",
       title: "squares（process）",
       caption: "2021　制作風景<br>口頭での指示を頼りに、目隠しをした状態で正方形のガイドラインをなぞる。 "
+    },
+    {
+      image: "thumb49.jpg",
+      title: "stamp_30cm",
+      caption: "2020"
+    },
+    {
+      image: "thumb50.jpg",
+      title: "stamp_50cm",
+      caption: "2020"
+    },
+    {
+      image: "thumb47.jpg",
+      title: "Lines",
+      caption: "2020"
+    },
+    {
+      image: "thumb48.jpg",
+      title: "Lines",
+      caption: "2020"
+    },
+    {
+      image: "thumb2.jpg",
+      title: "trophy for NANAIRO Sports Festa",
+      caption: "2019　100×100×200mm,acrylic board,aluminum block<br>つくば市洞峰公園で開催された「なないろスポーツフェスタ2019」駅伝部門の優勝トロフィーとして制作。<br>透明感のあるガラス色のアクリル板の内側に白のアクリル板をはめ込んである。"
     },
     {
       image: "thumb1.jpg",
