--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <h3 id="modal-title"></h3>
         <p id="modal-text"></p>
       </div>
-      <a class="prev" onclick="changeSlide(-1)">&#DAFF00;</a>
-      <a class="next" onclick="changeSlide(1)">&#DAFF00;</a>
+      <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
+      <a class="next" onclick="changeSlide(1)">&#10095;</a>
     </div>
   </div>
 
